force-app/main/default/objects/dw_ecard_app_dat_discrepancy_status__x/dw_ecard_app_dat_discrepancy_status__x.object-meta.xml
<CustomObject>
    <description>dw_ecard_app$dat_discrepancy_status</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_ecard_app$dat_discrepancy_status</externalName>
    <label>dw_ecard_app$dat_discrepancy_status</label>
    <pluralLabel>dw_ecard_app$dat_discrepancy_status</pluralLabel>
</CustomObject>