force-app/main/default/objects/dw_ecard_app_dat_discrepancy_status__x/fields/discrepancy_status_description__c.field-meta.xml
<CustomField>
    <fullName>discrepancy_status_description__c</fullName>
    <description>discrepancy_status_description</description>
    <externalDeveloperName>discrepancy_status_description</externalDeveloperName>
    <label>discrepancy_status_description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>