force-app/main/default/objects/dw_ecard_app_dat_discrepancy_status__x/fields/discrepancy_status_name__c.field-meta.xml
<CustomField>
    <fullName>discrepancy_status_name__c</fullName>
    <description>discrepancy_status_name</description>
    <externalDeveloperName>discrepancy_status_name</externalDeveloperName>
    <label>discrepancy_status_name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>